Local NTP: Fix --local-ntp-reload

When the --local-ntp-reload flag is enabled, strip out the integrity
placeholders from the html file. (They're inconvenient to compute, and
not required in this case, since CSP is already disabled.)

Bug: 740964
Change-Id: I4a93c97db480ee92eb049b320f112b9ddfd2bc7d
Reviewed-on: https://chromium-review.googlesource.com/568141
Commit-Queue: Marc Treib <treib@chromium.org>
Reviewed-by: Chris Pickel <sfiera@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486380}
Former-commit-id: 25dc05ccf7547ab780fef8bc29315fec9306945f